--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <version>2.5.1</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+		    <groupId>org.codehaus.groovy</groupId>
+		    <artifactId>groovy</artifactId>
+		    <version>2.4.5</version>
+            <scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
